@@ -36,17 +36,20 @@ import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.concurrent.locks.LockSupport;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
@@ -58,6 +61,9 @@ import javax.net.ssl.X509TrustManager;
 import io.quarkus.deployment.util.FileUtil;
 import io.quarkus.fs.util.ZipUtils;
 
+import io.restassured.RestAssured;
+import org.awaitility.Awaitility;
+import org.jboss.logging.Logger;
 import org.jboss.shrinkwrap.api.ShrinkWrap;
 import org.jboss.shrinkwrap.api.asset.EmptyAsset;
 import org.jboss.shrinkwrap.api.exporter.ZipExporter;
@@ -65,6 +71,7 @@ import org.jboss.shrinkwrap.api.spec.JavaArchive;
 import org.keycloak.common.Version;
 import org.keycloak.it.TestProvider;
 import org.keycloak.it.junit5.extension.CLIResult;
+import org.keycloak.quarkus.runtime.Environment;
 import org.keycloak.quarkus.runtime.cli.command.Build;
 import org.keycloak.quarkus.runtime.configuration.mappers.PropertyMapper;
 import org.keycloak.quarkus.runtime.configuration.mappers.PropertyMappers;
@@ -76,32 +83,78 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
 
     private static final int DEFAULT_SHUTDOWN_TIMEOUT_SECONDS = 10;
 
+    private static final Logger LOG = Logger.getLogger(RawKeycloakDistribution.class);
     private Process keycloak;
     private int exitCode = -1;
     private final Path distPath;
-    private final List<String> outputStream = new ArrayList<>();
-    private final List<String> errorStream = new ArrayList<>();
+    private final List<String> outputStream = Collections.synchronizedList(new ArrayList<>());
+    private final List<String> errorStream = Collections.synchronizedList(new ArrayList<>());
     private boolean manualStop;
     private String relativePath;
     private int httpPort;
     private int httpsPort;
-    private boolean debug;
-    private boolean enableTls;
-    private boolean reCreate;
-    private boolean removeBuildOptionsAfterBuild;
-    private boolean createAdminUser;
+    private final boolean debug;
+    private final boolean enableTls;
+    private final boolean reCreate;
+    private final boolean removeBuildOptionsAfterBuild;
+    private final int requestPort;
     private ExecutorService outputExecutor;
     private boolean inited = false;
-    private Map<String, String> envVars = new HashMap<>();
+    private final Map<String, String> envVars = new HashMap<>();
 
-    public RawKeycloakDistribution(boolean debug, boolean manualStop, boolean enableTls, boolean reCreate, boolean removeBuildOptionsAfterBuild) {
+    public RawKeycloakDistribution(boolean debug, boolean manualStop, boolean enableTls, boolean reCreate, boolean removeBuildOptionsAfterBuild, int requestPort) {
         this.debug = debug;
         this.manualStop = manualStop;
         this.enableTls = enableTls;
         this.reCreate = reCreate;
         this.removeBuildOptionsAfterBuild = removeBuildOptionsAfterBuild;
+        this.requestPort = requestPort;
         this.distPath = prepareDistribution();
     }
+    
+    public CLIResult kcadm(String... arguments) throws IOException {
+    	return kcadm(Arrays.asList(arguments));
+    }
+
+    public CLIResult kcadm(List<String> arguments) throws IOException {
+        List<String> allArgs = new ArrayList<>();
+
+        invoke(allArgs, SCRIPT_KCADM_CMD);
+
+        if (this.isDebug()) {
+            allArgs.add("-x");
+        }
+
+        allArgs.addAll(arguments);
+
+        ProcessBuilder pb = new ProcessBuilder(allArgs);
+        ProcessBuilder builder = pb.directory(distPath.resolve("bin").toFile());
+
+        // TODO: it is possible to debug kcadm, but it's more involved
+        /*if (debug) {
+            builder.environment().put("DEBUG_SUSPEND", "y");
+        }*/
+
+        builder.environment().putAll(envVars);
+
+        Process kcadm = builder.start();
+
+        List<String> outputStream = new ArrayList<>();
+        List<String> errorStream = new ArrayList<>();
+        readOutput(kcadm, outputStream, errorStream);
+
+        int exitValue = kcadm.exitValue();
+
+        return CLIResult.create(outputStream, errorStream, exitValue);
+    }
+
+	private void invoke(List<String> allArgs, String cmd) {
+		if (isWindows()) {
+            allArgs.add(distPath.resolve("bin") + File.separator + cmd);
+        } else {
+            allArgs.add("./" + cmd);
+        }
+	}
 
     @Override
     public CLIResult run(List<String> arguments) {
@@ -128,8 +181,8 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
             throw new RuntimeException("Failed to start the server", cause);
         } finally {
             if (arguments.contains(Build.NAME) && removeBuildOptionsAfterBuild) {
-                for (List<PropertyMapper> mappers : PropertyMappers.getBuildTimeMappers().values()) {
-                    for (PropertyMapper mapper : mappers) {
+                for (List<PropertyMapper<?>> mappers : PropertyMappers.getBuildTimeMappers().values()) {
+                    for (PropertyMapper<?> mapper : mappers) {
                         removeProperty(mapper.getFrom().substring(3));
                     }
                 }
@@ -139,6 +192,8 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
                 envVars.clear();
             }
         }
+
+        setRequestPort();
 
         return CLIResult.create(getOutputStream(), getErrorStream(), getExitCode());
     }
@@ -174,9 +229,9 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
             return;
         }
 
-        CompletableFuture allProcesses = CompletableFuture.completedFuture(null);
+        CompletableFuture<?> allProcesses = CompletableFuture.completedFuture(null);
 
-        for (ProcessHandle process : parent.descendants().collect(Collectors.toList())) {
+        for (ProcessHandle process : parent.descendants().toList()) {
             if (force) {
                 process.destroyForcibly();
             } else {
@@ -227,11 +282,7 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
     public String[] getCliArgs(List<String> arguments) {
         List<String> allArgs = new ArrayList<>();
 
-        if (isWindows()) {
-            allArgs.add(distPath.resolve("bin") + File.separator + SCRIPT_CMD_INVOKABLE);
-        } else {
-            allArgs.add(SCRIPT_CMD_INVOKABLE);
-        }
+        invoke(allArgs, SCRIPT_CMD);
 
         if (this.isDebug()) {
             allArgs.add("--debug");
@@ -253,6 +304,34 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
         return allArgs.toArray(String[]::new);
     }
 
+    @Override
+    public void assertStopped() {
+        try {
+            if (keycloak != null) {
+                keycloak.onExit().get(DEFAULT_SHUTDOWN_TIMEOUT_SECONDS, TimeUnit.SECONDS);
+            }
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new RuntimeException(e);
+        } catch (ExecutionException e) {
+            throw new RuntimeException(e);
+        } catch (TimeoutException e) {
+            LOG.warn("Process did not exit as expected, will attempt a thread dump");
+            threadDump();
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public void setRequestPort() {
+        setRequestPort(requestPort);
+    }
+
+    @Override
+    public void setRequestPort(int port) {
+        RestAssured.port = port;
+    }
+
     private void waitForReadiness() throws MalformedURLException {
         waitForReadiness("http", httpPort);
 
@@ -269,6 +348,7 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
 
         while (true) {
             if (System.currentTimeMillis() - startTime > getStartTimeout()) {
+                threadDump();
                 throw new IllegalStateException(
                         "Timeout [" + getStartTimeout() + "] while waiting for Quarkus server", ex);
             }
@@ -306,6 +386,22 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
                 }
             }
         }
+    }
+
+    private void threadDump() {
+        if (Environment.isWindows()) {
+            return;
+        }
+        try {
+            ProcessBuilder builder = new ProcessBuilder("kill", "-3", String.valueOf(keycloak.pid()));
+            Process p = builder.start();
+            p.onExit().get(getStartTimeout(), TimeUnit.MILLISECONDS);
+        } catch (Exception e) {
+            LOG.warn("A thread dump may not have been successfully triggered", e);
+            return;
+        }
+        Awaitility.await().atMost(1, TimeUnit.MINUTES)
+                .until(() -> getOutputStream().stream().anyMatch(s -> s.contains("JNI global refs")));
     }
 
     private long getStartTimeout() {
@@ -405,14 +501,15 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
                 if (System.getProperty("product") != null) {
                     // JDBC drivers might be excluded if running as a product build
                     copyProvider(dPath, "com.microsoft.sqlserver", "mssql-jdbc");
-                    copyProvider(dPath, "com.oracle.database.jdbc", "ojdbc11");
-                    copyProvider(dPath, "com.oracle.database.nls", "orai18n");
                 }
             }
 
             // make sure script is executable
             if (!dPath.resolve("bin").resolve(SCRIPT_CMD).toFile().setExecutable(true)) {
                 throw new RuntimeException("Cannot set " + SCRIPT_CMD + " executable");
+            }
+            if (!dPath.resolve("bin").resolve(SCRIPT_KCADM_CMD).toFile().setExecutable(true)) {
+                throw new RuntimeException("Cannot set " + SCRIPT_KCADM_CMD + " executable");
             }
 
             inited = true;
@@ -424,11 +521,15 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
     }
 
     private void readOutput() {
+        readOutput(keycloak, outputStream, errorStream);
+    }
+
+    private static void readOutput(Process process, List<String> outputStream, List<String> errorStream) {
         try (
-                BufferedReader outStream = new BufferedReader(new InputStreamReader(keycloak.getInputStream()));
-                BufferedReader errStream = new BufferedReader(new InputStreamReader(keycloak.getErrorStream()));
+                BufferedReader outStream = new BufferedReader(new InputStreamReader(process.getInputStream()));
+                BufferedReader errStream = new BufferedReader(new InputStreamReader(process.getErrorStream()));
         ) {
-            while (keycloak.isAlive()) {
+            while (process.isAlive()) {
                 readStream(outStream, outputStream);
                 readStream(errStream, errorStream);
                 // a hint to temporarily disable the current thread in favor of the process where the distribution is running
@@ -440,7 +541,7 @@ public final class RawKeycloakDistribution implements KeycloakDistribution {
         }
     }
 
-    private void readStream(BufferedReader reader, List<String> stream) throws IOException {
+    private static void readStream(BufferedReader reader, List<String> stream) throws IOException {
         String line;
 
         while (reader.ready() && (line = reader.readLine()) != null) {
